<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/temperature_cricket"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/ivThermometer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/thermometer"
        android:contentDescription="@string/thermometer_image"
        android:layout_gravity="center"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/description"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/colorText"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:inputType="number"
        android:hint="@string/input"
        android:gravity="center"
        android:layout_gravity="center"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnCalculateTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:text="@string/btn_text"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent" />
48
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:text="@string/result"
        android:visibility="gone" />

</LinearLayout>